@@ -1,6 +1,6 @@
 // This may look like C code, but it is really -*- C++ -*-
 //
-// Copyright Bob Friesenhahn, 1999 - 2016
+// Copyright Bob Friesenhahn, 1999 - 2018
 //
 // Implementation of Drawable (Graphic objects)
 //
@@ -290,7 +290,7 @@ void Magick::DrawableBezier::operator()( MagickLib::DrawContext context_ ) const
       p++;
     }
 
-  DrawBezier( context_, (const unsigned long) num_coords, coordinates );
+  DrawBezier( context_, (unsigned long) num_coords, coordinates );
   delete [] coordinates;
 }
 Magick::DrawableBase* Magick::DrawableBezier::copy() const
@@ -800,7 +800,7 @@ void Magick::DrawablePolygon::operator()
       p++;
     }
 
-  DrawPolygon( context_, (const unsigned long) num_coords, coordinates );
+  DrawPolygon( context_, (unsigned long) num_coords, coordinates );
   delete [] coordinates;
 }
 Magick::DrawableBase* Magick::DrawablePolygon::copy() const
@@ -840,7 +840,7 @@ void Magick::DrawablePolyline::operator()
       p++;
     }
 
-  DrawPolyline( context_, (const unsigned long) num_coords, coordinates );
+  DrawPolyline( context_, (unsigned long) num_coords, coordinates );
   delete [] coordinates;
 }
 Magick::DrawableBase* Magick::DrawablePolyline::copy() const
@@ -1064,7 +1064,7 @@ Magick::DrawableDashArray& Magick::DrawableDashArray::operator=
 void Magick::DrawableDashArray::operator()
   ( MagickLib::DrawContext context_ ) const
 {
-  DrawSetStrokeDashArray( context_, (const unsigned long) _size, _dasharray );
+  DrawSetStrokeDashArray( context_, (unsigned long) _size, _dasharray );
 }
 Magick::DrawableBase* Magick::DrawableDashArray::copy() const
 {
