@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020181026"
-#define public MagickPackageReleaseDate "snapshot-20181026"
+#define public MagickPackageVersionAddendum ".020181027"
+#define public MagickPackageReleaseDate "snapshot-20181027"
