@@ -1,5 +1,5 @@
 /*
-  Copyright (C) 2004-2016 GraphicsMagick Group
+  Copyright (C) 2004-2018 GraphicsMagick Group
 
   This program is covered by multiple licenses, which are described in
   Copyright.txt. You should have received a copy of Copyright.txt with this
